# tetris

./: .env_sample  .gitignore  Cargo.toml  LICENSE  README.md
resources/: Info.plist
src/: block.rs  board.rs  config.rs  main.rs  record.rs  scene.rs  square.rs  utils.rs
src/scripts/: build.sh
src/states/: over.rs  play.rs  start.rs
