[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
rand = "0.8.5"
smart-default = "0.7.1"
strum = { version = "0.26.2", features = ["derive"] }
arrayvec = "0.7.4"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
dotenv = "0.15.0"
envy = "0.4.2"
